[package]
name = "pkstate"
version = "0.1.1"
edition = "2024"
description = "A library for representing, serializing, and deserializing the state of a poker hand"
license = "MIT OR Apache-2.0"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
documentation = "https://docs.rs/pkstate"
homepage = "https://github.com/ImperialBower/pkstate"
repository = "https://github.com/ImperialBower/pkstate"

[dependencies]
cardpack = "0.6.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_bw = "2.5.2"
